infra/apps/n8n/n8n-http-ingressroute.yaml
# infra/apps/n8n/n8n-http-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-http
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auto.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: n8n
          port: 80
