infra/apps/n8n/n8n-ingressroute.yaml
# infra/apps/n8n/n8n-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auto.albertperez.dev`)
      kind: Rule
      services:
        - name: n8n
          port: 80
  tls:
    certResolver: le
